Fetch heroes and output as JSON

--- a/src/app/pages/list-page/list-page.component.html
+++ b/src/app/pages/list-page/list-page.component.html
@@ -1,1 +1,9 @@
-<p>list-page works!</p>
+<h1>
+  Heroes
+</h1>
+
+<ul *ngFor="let hero of heroes$ | async">
+  <li>
+    {{ hero | json }}
+  </li>
+</ul>
