--- a/src/app/molecules/list-table/list-table.component.html
+++ b/src/app/molecules/list-table/list-table.component.html
@@ -25,7 +25,7 @@
     </th>
 
     <td mat-cell *matCellDef="let hero">
-      {{ hero.firstName }} {{ hero.lastName }}
+      <a [routerLink]="hero.id">{{ hero.firstName }} {{ hero.lastName }}</a>
     </td>
   </ng-container>
 
