bufix/Fix ExpressionChangedAfterChecked error on list table by debouncing new values to the $ input property. Show a loading indicator when the table is bootstrapping

--- a/src/app/molecules/list-table/list-table.component.html
+++ b/src/app/molecules/list-table/list-table.component.html
@@ -1,4 +1,9 @@
-<table mat-table [dataSource]="dataSource" [trackBy]="trackById">
+<table
+  *ngIf="heroes$ | async; else fetchingData"
+  mat-table
+  [dataSource]="dataSource"
+  [trackBy]="trackById"
+>
   <!-- Selected column -->
   <ng-container matColumnDef="selected">
     <th mat-header-cell *matHeaderCellDef>
@@ -43,3 +48,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let hero; columns: displayedColumns"></tr>
 </table>
+
+<ng-template #fetchingData>
+  <mat-spinner diameter="25"></mat-spinner>
+</ng-template>
