--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -11,8 +11,7 @@
   </h2>
 
   <div>
-    <span>Phone number</span>
-    <span>{{ hero.phoneNumber }}</span>
+    <span>Phone number</span> <span>{{ hero.phoneNumber }}</span>
   </div>
   <pre>
     {{ hero | json }}
