--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,35 @@
-<router-outlet></router-outlet>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <a class="name" routerLink="/">Heroes App</a>
+
+    <!-- Fill space to the left to right-align the row content -->
+    <span class="fill-space"></span>
+
+    <button
+      mat-icon-button
+      (click)="sideNav.toggle()"
+      [ngSwitch]="sideNav.opened"
+    >
+      <mat-icon *ngSwitchCase="true">close</mat-icon>
+
+      <mat-icon *ngSwitchDefault>menu</mat-icon>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sideNav mode="side" position="end">
+    <mat-nav-list>
+      <a
+        mat-list-item
+        routerLink="/"
+        *ngFor="let navigationItem of navigationItems"
+        >{{ navigationItem }}</a
+      >
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
