Remove border and background color from top-nav menu button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <span class="fill-space"></span>
 
     <button
+      class="menu-button"
       mat-icon-button
       (click)="sideNav.toggle()"
       [ngSwitch]="sideNav.opened"
