fixup/Configure sidenav to be fixed so we don't have multiple scrollbars

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,13 @@
 </mat-toolbar>
 
 <mat-sidenav-container>
-  <mat-sidenav #sideNav mode="side" position="end">
+  <mat-sidenav
+    #sideNav
+    mode="side"
+    position="end"
+    fixedInViewport="true"
+    fixedTopGap="64"
+  >
     <mat-nav-list>
       <a
         mat-list-item
