--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -1,10 +1,14 @@
 <ng-container *ngIf="hero$ | async as hero; else fetchingData">
   <div class="container">
     <img [src]="hero.avatarUrl" i18n-alt alt="Hero avatar" />
-    <h1 class="name">
-      {{ hero.firstName }}
-      {{ hero.lastName }}
-    </h1>
+
+    <div class="heading-with-link">
+      <h1>
+        {{ hero.firstName }}
+        {{ hero.lastName }}
+      </h1>
+      <a mat-button [routerLink]="'edit'" i18n>Edit</a>
+    </div>
 
     <div class="info">
       <h2 i18n>
