--- a/src/app/pages/edit-page/edit-page.component.html
+++ b/src/app/pages/edit-page/edit-page.component.html
@@ -1,38 +1,50 @@
-<div class="heading-with-link">
+<div>
   <h1>
     Edit hero
   </h1>
-  <button
-    *ngIf="hero$ | async as hero"
-    mat-button
-    [routerLink]="['/heroes', hero.id]"
-    i18n
-  >
-    Cancel
-  </button>
 </div>
 
 <ng-container *ngIf="hero$ | async as hero; else fetchingData">
-  <form [formGroup]="editForm">
+  <form [formGroup]="editForm" (ngSubmit)="onSubmit(hero.id, editForm)">
     <mat-form-field>
       <mat-label>First name</mat-label>
       <input matInput formControlName="firstName" />
+      <mat-error i18n>This field is required</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Last name</mat-label>
       <input matInput formControlName="lastName" />
+      <mat-error i18n>This field is required</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Phone number</mat-label>
       <input matInput formControlName="phoneNumber" />
+      <mat-error i18n>This field is required</mat-error>
     </mat-form-field>
 
     <mat-form-field class="url-form-field">
       <mat-label>Avatar URL</mat-label>
       <input matInput formControlName="avatarUrl" />
+      <mat-error i18n>This field is required</mat-error>
     </mat-form-field>
+
+    <div>
+      <button
+        [disabled]="editForm.invalid"
+        type="submit"
+        color="primary"
+        mat-raised-button
+        i18n
+      >
+        Save
+      </button>
+
+      <a mat-raised-button [routerLink]="['/heroes', hero.id]" i18n>
+        Cancel
+      </a>
+    </div>
   </form>
 </ng-container>
 
