--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,12 +27,9 @@
     fixedTopGap="64"
   >
     <mat-nav-list>
-      <a
-        mat-list-item
-        routerLink="/"
-        *ngFor="let navigationItem of navigationItems"
-        >{{ navigationItem }}</a
-      >
+      <a mat-list-item routerLink="/">Home</a>
+
+      <a mat-list-item routerLink="/heroes/create">Create</a>
     </mat-nav-list>
   </mat-sidenav>
 
