--- a/src/app/pages/edit-page/edit-page.component.html
+++ b/src/app/pages/edit-page/edit-page.component.html
@@ -6,29 +6,7 @@
 
 <ng-container *ngIf="hero$ | async as hero; else fetchingData">
   <form [formGroup]="editForm" (ngSubmit)="onSubmit(hero.id, editForm)">
-    <mat-form-field>
-      <mat-label>First name</mat-label>
-      <input matInput formControlName="firstName" />
-      <mat-error i18n>This field is required</mat-error>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>Last name</mat-label>
-      <input matInput formControlName="lastName" />
-      <mat-error i18n>This field is required</mat-error>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>Phone number</mat-label>
-      <input matInput formControlName="phoneNumber" />
-      <mat-error i18n>This field is required</mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="url-form-field">
-      <mat-label>Avatar URL</mat-label>
-      <input matInput formControlName="avatarUrl" />
-      <mat-error i18n>This field is required</mat-error>
-    </mat-form-field>
+    <app-hero-form [formControl]="editForm.controls['hero']"></app-hero-form>
 
     <div>
       <button
