Fix double-scrollbar issue by removing 100% width on mat-sidenav-container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,21 +19,15 @@
 </mat-toolbar>
 
 <mat-sidenav-container>
-  <mat-sidenav
-    #sideNav
-    mode="side"
-    position="end"
-    fixedInViewport="true"
-    fixedTopGap="64"
-  >
-    <mat-nav-list>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+
+  <mat-sidenav #sideNav mode="side" position="end" fixedTopGap="64">
+    <mat-nav-list (click)="sideNav.toggle()">
       <a mat-list-item routerLink="/">Home</a>
 
       <a mat-list-item routerLink="/heroes/create">Create</a>
     </mat-nav-list>
   </mat-sidenav>
-
-  <mat-sidenav-content>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
 </mat-sidenav-container>
