Add close button to success and failure snackbar components. Add 'Delete' case to success and failure snackbar components

--- a/src/app/atoms/snackbar-failure/snackbar-failure.component.html
+++ b/src/app/atoms/snackbar-failure/snackbar-failure.component.html
@@ -1,9 +1,15 @@
-<ng-container [ngSwitch]="snackbarSource">
+<div [ngSwitch]="snackbarSource">
   <span i18n *ngSwitchCase="SnackbarSource.Create">
     Create failed
+  </span>
+
+  <span i18n *ngSwitchCase="SnackbarSource.Delete">
+    Delete failed
   </span>
 
   <span *ngSwitchCase="SnackbarSource.Update">
     Update failed
   </span>
-</ng-container>
+
+  <button mat-raised-button (click)="onDismiss()">Close</button>
+</div>
