Fixup button styles and remove unused SCSS

--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -7,8 +7,8 @@
         {{ hero.firstName }}
         {{ hero.lastName }}
       </h1>
-      <a mat-button routerLink="edit" i18n>Edit</a>
-      <button mat-button (click)="delete(hero)" color="warn" i18n>
+      <a mat-raised-button routerLink="edit" i18n>Edit</a>
+      <button mat-raised-button (click)="delete(hero)" color="warn" i18n>
         Delete
       </button>
     </div>
