Add snackbar messages to delete hero effects

--- a/src/app/dialogs/delete-hero-dialog/delete-hero-dialog.component.html
+++ b/src/app/dialogs/delete-hero-dialog/delete-hero-dialog.component.html
@@ -13,7 +13,7 @@
 <mat-dialog-actions>
   <button
     (click)="onSubmit(hero)"
-    mat-button
+    mat-raised-button
     color="primary"
     cdkFocusInitial
     i18n
@@ -21,7 +21,7 @@
     Delete
   </button>
 
-  <button mat-button mat-dialog-close i18n>
+  <button mat-raised-button mat-dialog-close i18n>
     Cancel
   </button>
 </mat-dialog-actions>
