--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../scss/variables';
+
 .menu-button {
   background-color: transparent;
   border: none;
@@ -10,6 +12,11 @@
 mat-sidenav {
   max-width: 18.75rem; // 300px
   min-width: 12.5rem; // 200px
+
+  .active-menu-item {
+    background-color: $accent;
+    color: white;
+  }
 }
 
 mat-sidenav-content {
