Add barcode scanner proof-of-concept

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,14 @@
         [routerLinkActiveOptions]="{ exact: true }"
         >Create</a
       >
+
+      <a
+        mat-list-item
+        routerLink="/heroes/scan"
+        routerLinkActive="active-menu-item"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Scan</a
+      >
     </mat-nav-list>
   </mat-sidenav>
 </mat-sidenav-container>
